修改手机验证码 审核人：海亮

--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -189,7 +189,7 @@
             }
             $(".act-code-btn").unbind("click");
             $.ajax({
-                url:'/sendcode_s',
+                url:'/sendcode_s_coupon',
                 type:'post',
                 data:{
                     phone:$.trim($('#act-phone').val())
