修改夏展活动顾问 样式 评审人 王维久

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -491,7 +491,7 @@
           layer.msg("请输入正文内容");
           return false;
         }
-        if(editor.txt.text().match(/^1\d{10}$/)){
+        if(editor.txt.text().match(/1\d{10}/)){
           //过滤手机号
           layer.msg("文章内容不能带手机号");
           return false;
@@ -638,7 +638,7 @@
           layer.msg("请输入正文内容");
           return false;
         }
-        if(editor.txt.text().match(/^1\d{10}$/)){
+        if(editor.txt.text().match(/1\d{10}/)){
           //过滤手机号
           layer.msg("文章内容不能带手机号");
           return false;
