修改底部弹窗 审核人：淑琴

--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -208,7 +208,7 @@
                     if(msg.code == 0){
                         countDown();
                     } else {
-                        layer.msg(msg.massage);
+                        layer.msg(msg.message);
                         $(".act-code-btn").bind("click",getCode);
                     }
                 },
