--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -4,7 +4,7 @@
 </div>
 <div class="act-pop-box" >
     <div class="act-pop-info-box clearfix">
-        <input class="act-pop-input" placeholder="请输入姓名" id="act-name" maxlength="10" >
+        <input class="act-pop-input" placeholder="请输入姓名" id="act-name" maxlength="10" autocomplete="off">
         <input class="act-pop-input" placeholder="请输入手机号" id="act-phone" >
         <div class="act-code-box">
             <input class="act-code-input" id="act-code" placeholder="请输入验证码" >
