--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -7,7 +7,7 @@
         <input class="act-pop-input" placeholder="请输入姓名" id="act-name" maxlength="10" autocomplete="off">
         <input class="act-pop-input" placeholder="请输入手机号" id="act-phone" >
         <div class="act-code-box">
-            <input class="act-code-input" id="act-code" placeholder="请输入验证码" >
+            <input class="act-code-input" id="act-code" placeholder="请输入验证码" style="width: 47.1%">
             <span style="color:#dcdcdc;">|</span>
             <div class="act-code-btn" >
                 点击发送验证码
