点击查看活动详情

--- a/views/widget/modal/dialog.html
+++ b/views/widget/modal/dialog.html
@@ -1,7 +1,7 @@
 <div class="dialog-modal" style="display: none;">
 	<div class="modal-content">
 	  <div class="formContent formposirion">
-		  <a href="http://www.jjl.cn/zt/2018/20180528_xiazhan/default.shtml" target="_blank" class="more-look" style="color:#fff;">点击查看展会详情</a>
+		  <a href="http://www.jjl.cn/zt/2018/20180528_xiazhan/default.shtml" target="_blank" class="more-look"></a>
 		  <a href="javascript:;" class="close"></a>
 		 <div class="form-group">
 			<div><input type="text" placeholder="请输入姓名" class="name" id="myname" maxlength="10"></div>
