--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -141,9 +141,9 @@
         <img src="{{helper.cdnhost}}/assets/img/popup_detail_b.png" />
     </a>
     <div class="act-pop-x-btn" ></div>
-    <span class="act-pop-time">
+    {#<span class="act-pop-time">
         活动时间：2018年6月23日至2018年8月25日
-    </span>
+    </span>#}
 </div>
 <script>
     $(function(){
