修改底部遮罩样式 审核人：淑琴

--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -121,7 +121,8 @@
         padding:8px 12px 3px;
         background:#fff;
         width: 518px;
-        left: -422px;
+        /* left: -422px; */
+        right: 0px;
         top: -109px;
         z-index: 100;
     }
