--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -2,7 +2,9 @@
 <div class="act-pop-left" >
     <img src="{{helper.cdnhost}}/assets/img/popup_left_b.png" />
 </div>
+
 <div class="act-pop-box" >
+  <div class="act-pop-box-con">
     <div class="act-pop-info-box clearfix">
         {# 清除表单自动添加 #}
         <form style="display:none"> 
@@ -144,7 +146,9 @@
     {#<span class="act-pop-time">
         活动时间：2018年6月23日至2018年8月25日
     </span>#}
+  </div>
 </div>
+
 <script>
     $(function(){
         $(".act-pop-country li:nth-child(8n)").css({'marginRight':'0'});
