--- a/views/widget2/active_popup/active_popup.css
+++ b/views/widget2/active_popup/active_popup.css
@@ -18,6 +18,7 @@
         margin: 0 auto;
         background:url(../../assets/img/popup_bg_b1.png);
         background-size: 100% 100%;
+        background-position-x: 10px;
         position: relative;
         top: -28px;
     }
