修改优惠券来源 审核人：海亮

--- a/views/widget2/active_popup/active_popup.html
+++ b/views/widget2/active_popup/active_popup.html
@@ -252,6 +252,18 @@
                 return false;
             }
             var that = this;
+            var h = window.location.href;
+            var hh = h.split("?");
+            var sou = [];
+            if (hh[1]) {
+                var hhh = hh[1].split("&");
+                for (var i = 0;i < hhh.length;i++) {
+                    if (hhh[i].split("cmpid=")[1] != null) {
+                        sou = hhh[i].split("cmpid=")
+                        console.log('sou',sou)
+                    }
+                }
+            }
             $(this).unbind('click');
             $.ajax({
                 url: '/getCoupons',
@@ -260,7 +272,8 @@
                     user_name: actName,
                     mobile: phone,
                     country_id: country,
-                    code:code
+                    code:code,
+                    source: sou[1]
                 },
                 dataType:'json',
                 success:function(msg){
