修改发布文章提示语 评审人 王维久

--- a/public/assets/css/release_article.css
+++ b/public/assets/css/release_article.css
@@ -204,7 +204,13 @@
 .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
     margin-top: -33px
 }
-
+.edit-p-rule{
+  margin-left: 94.52px;
+  color: #333;
+  line-height: 24px;
+  margin-top: 5px;
+  font-size: 12px;
+}
 
 /*==================移民=====================*/
 .project-div{
