修改发布文章提示语 评审人 王维久

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -196,12 +196,7 @@
               </div>  
             </div>
             <p class="edit-p-rule" >
-             <span style="color:#c13232; ">*特别提示：如没上传顾问头像，首页则不显示该顾问文章。</span> <br/>
-              赛道1规则：留学时讯浏览量前3名的文章，左1为第1名；中，本，研，博中显示的时讯与推荐一致。<br/>
-              赛道2规则：回复用户响应时间最快的前3名的最新文章，左1为第1名。<br/>
-              赛道3规则：发布文章量最多的前3名的最新文章，左1为第1名。<br/>
-              赛道4规则：文章阅读量最多的前3名文章，左1为第1名。<br/>
-              赛道5规则：文章点赞量最多的前3名文章，左1为第1名。
+             <span style="color:#c13232; ">*特别提示：如没上传顾问头像，首页则不显示该顾问文章。</span>
             </p>
             <div class="editor-btn-box" >
               <a  href="javascript:void(0);" class="dui-btn btn-xlarge btn-appointment" style="margin-right: 7px;" id="save-draft">
