移民分公司的添加   审核  淑琴

--- a/views/yimin_index.html
+++ b/views/yimin_index.html
@@ -320,6 +320,18 @@
         "companyId": "48"
         },
         {
+        "companyName": "墨尔本",
+        "companyId": "52"
+        },
+        {
+        "companyName": "奥克兰",
+        "companyId": "51"
+        },
+        {
+        "companyName": "多伦多",
+        "companyId": "50"
+        },
+        {
         "companyName": "温哥华",
         "companyId": "49"
         }
