修改举报限制内容 修改移民发布文章调试

--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -403,7 +403,7 @@
       '<span class="sp-con">其它原因</span>' +
       '</li>' +
       '</ul>' +
-      '<textarea class="report-txt"></textarea>' +
+      '<textarea class="report-txt" placeholder="内容最多为500个字符" maxlength="500"></textarea>' +
       '</div>',
       btn: '确定',
       closeBtn: '2',
