修改移民发布文章

--- a/views/release_article_yimin.html
+++ b/views/release_article_yimin.html
@@ -651,6 +651,7 @@
           return false;
         }   
         $(this).unbind('click');
+        var that = this;
         $.ajax({
           url: '/soapi/publish_article',
           type:'POST',
