修改移民发布文章

--- a/views/edit_article_yimin.html
+++ b/views/edit_article_yimin.html
@@ -245,7 +245,7 @@
                 <span>*</span> 选择推荐标签：
               </label>
               {% set recommendList = [
-                {'name':'移民资讯','val':'移民资讯'},
+                {'name':'移民咨讯','val':'移民咨讯'},
                 {'name':'政策解读','val':'政策解读'},
                 {'name':'项目解析','val':'项目解析'},
                 {'name':'风土人情','val':'风土人情'},
