添加发布文章页 pdf功能

--- a/views/release_article.html
+++ b/views/release_article.html
@@ -44,7 +44,29 @@
         <div class="rel-case-con" >
 	        <div class="main-title gray-bg">
 		        <h3 style="font-size: 18px;">发布我的文章</h3>
-	        </div>
+          </div>
+          <div class="assistant">
+            <ul class="assistant-tab">
+              <li class="img-tab active">
+                <span class="pic"></span>
+                <span>图片处理助手</span>
+              </li>
+              <li class="h5-tab">
+                  <span class="pic"></span>
+                  <span>H5制作助手</span>
+              </li>
+              <li class="article-tab">
+                  <span class="pic"></span>
+                  <span>文章发布助手</span>
+              </li>
+            </ul>
+            <div class="assistant-cont" data-pdf="{{getpdf}}">
+              <div class="img-content"></div>
+              <div class="fold-btn">
+                <img src="{{helper.cdnhost}}/assets/img/pdfImg/article_icon_SQ@2x.png" alt="">
+              </div>
+            </div>
+          </div>
   	      <div class="rel-case-list" >
             <div class="rel-case-text1" style="margin-top: 20px;">
               <label class="title active" for="apply-country">
@@ -221,32 +243,53 @@
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/xSlider-4.15.js" ></script>
+  <script src="{{helper.cdnhost}}/dep/js/jquery.media.js"></script>
   <script >
     $(function(){
-        var login_ss = null; //获取用户信息
-        if(cookie('login_ss') != undefined){
-            login_ss = JSON.parse(cookie('login_ss'));
+      var pdfList = JSON.parse($('.assistant-cont').attr('data-pdf'))|| [];
+      console.log(pdfList)
+      $('.img-content').media({
+        width: '100%',
+        height: '500px',
+        autoplay: true,
+        src:pdfList[1].file_path,
+      });
+      $('.assistant-tab li').on('click',function(){
+        $('.assistant-tab li').removeClass('active');
+        $(this).addClass('active');
+        $('.assistant-cont').slideDown();
+        var index = $(this).index()+1;
+        if(pdfList[index]){
+          $('.img-content').media({
+            width: '100%',
+            height: '500px',
+            autoplay: true,
+            src:pdfList[index].file_path
+          });
         }
-        $('.banner-box-left .slider').xSlider({
-            //轮播图配置
-//          autoplay : 500,
-            current: 0,
-            speed: 500,
-            intervalTime: 5000,
-            pagination: true,
-            dotPostion:'right'
-        });
-        $('.banner-box-right .slider').xSlider({
-            //轮播图配置
-//          autoplay : 500,
-//            mode:'vertical',
-            current: 0,
-            speed: 1000,
-            intervalTime: 5000,
-            slidesPerView : 2,
-            slidesPerGroup : 2,
-          pagination: true
-        });
+      })
+      $('.fold-btn').on('click',function(){
+        $('.assistant-cont').slideUp();
+      }) 
+      var login_ss = null; //获取用户信息
+      if(cookie('login_ss') != undefined){
+          login_ss = JSON.parse(cookie('login_ss'));
+      }
+      $('.banner-box-left .slider').xSlider({
+          current: 0,
+          speed: 500,
+          intervalTime: 5000,
+          pagination: true,
+          dotPostion:'right'
+      });
+      $('.banner-box-right .slider').xSlider({
+          current: 0,
+          speed: 1000,
+          intervalTime: 5000,
+          slidesPerView : 2,
+          slidesPerGroup : 2,
+        pagination: true
+      });
       var city_id =null;
       if(login_ss.usertype ==2){
         //获取顾问的组织id
