修改移民水印图片

--- a/views/release_article_yimin.html
+++ b/views/release_article_yimin.html
@@ -495,7 +495,7 @@
       editor.customConfig.debug = false;
       // 关闭粘贴样式的过滤
       editor.customConfig.pasteFilterStyle = false;
-      editor.customConfig.uploadFileName = 'upload';
+      editor.customConfig.uploadFileName = 'yimin_upload';
       // 将图片大小限制为 500K
       editor.customConfig.uploadImgMaxSize = 2*1024 * 1024;
       // 限制一次最多上传 5 张图片
